[main] Update AL-Go System Files from microsoft/AL-Go-PTE@preview -  6e5bf7752c8288a922c50393814925d794e9ec38

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,4 +1,5 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main"
+  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@preview",
+  "templateSha": "6e5bf7752c8288a922c50393814925d794e9ec38"
 }
