[main@9481e25] Update AL-Go System Files from microsoft/AL-Go-PTE@preview - 6e5bf77

--- a/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -19,6 +19,8 @@ on:
         description: Specify a comma-separated list of branches to update. Wildcards are supported. The AL-Go settings will be read for every branch. Leave empty to update the current branch only.
         required: false
         default: ''
+  schedule:
+    - cron: '55 08 * * 3'
 
 permissions:
   actions: read
