--- a/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -46,14 +46,14 @@ jobs:
 
       - name: Read settings
         id: ReadSettings
-        uses: microsoft/AL-Go/Actions/ReadSettings@4dd210d3d780decee8e8b858fe216e559f7ce2bc
+        uses: microsoft/AL-Go/Actions/ReadSettings@308e2016d765777e075d36bd9ededc4e64c5e65a
         with:
           shell: powershell
           get: templateUrl
 
       - name: Get Workflow Multi-Run Branches
         id: GetBranches
-        uses: microsoft/AL-Go/Actions/GetWorkflowMultiRunBranches@4dd210d3d780decee8e8b858fe216e559f7ce2bc
+        uses: microsoft/AL-Go/Actions/GetWorkflowMultiRunBranches@308e2016d765777e075d36bd9ededc4e64c5e65a
         with:
           shell: powershell
           includeBranches: ${{ github.event.inputs.includeBranches }}
@@ -74,7 +74,7 @@ jobs:
   UpdateALGoSystemFiles:
     name: "[${{ matrix.branch }}] Update AL-Go System Files"
     needs: [ Initialize ]
-    runs-on: [ windows-latest ]
+    runs-on: windows-latest
     strategy:
       matrix:
         branch: ${{ fromJson(needs.Initialize.outputs.UpdateBranches).branches }}
@@ -82,7 +82,7 @@ jobs:
 
     steps:
       - name: Dump Workflow Information
-        uses: microsoft/AL-Go/Actions/DumpWorkflowInfo@4dd210d3d780decee8e8b858fe216e559f7ce2bc
+        uses: microsoft/AL-Go/Actions/DumpWorkflowInfo@308e2016d765777e075d36bd9ededc4e64c5e65a
         with:
           shell: powershell
 
@@ -93,19 +93,19 @@ jobs:
 
       - name: Initialize the workflow
         id: init
-        uses: microsoft/AL-Go/Actions/WorkflowInitialize@4dd210d3d780decee8e8b858fe216e559f7ce2bc
+        uses: microsoft/AL-Go/Actions/WorkflowInitialize@308e2016d765777e075d36bd9ededc4e64c5e65a
         with:
           shell: powershell
 
       - name: Read settings
-        uses: microsoft/AL-Go/Actions/ReadSettings@4dd210d3d780decee8e8b858fe216e559f7ce2bc
+        uses: microsoft/AL-Go/Actions/ReadSettings@308e2016d765777e075d36bd9ededc4e64c5e65a
         with:
           shell: powershell
           get: commitOptions
 
       - name: Read secrets
         id: ReadSecrets
-        uses: microsoft/AL-Go/Actions/ReadSecrets@4dd210d3d780decee8e8b858fe216e559f7ce2bc
+        uses: microsoft/AL-Go/Actions/ReadSecrets@308e2016d765777e075d36bd9ededc4e64c5e65a
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -132,7 +132,9 @@ jobs:
           Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "downloadLatest=$downloadLatest"
 
       - name: Update AL-Go system files
-        uses: microsoft/AL-Go/Actions/CheckForUpdates@4dd210d3d780decee8e8b858fe216e559f7ce2bc
+        uses: microsoft/AL-Go/Actions/CheckForUpdates@308e2016d765777e075d36bd9ededc4e64c5e65a
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           shell: powershell
           token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
@@ -144,7 +146,7 @@ jobs:
 
       - name: Finalize the workflow
         if: always()
-        uses: microsoft/AL-Go/Actions/WorkflowPostProcess@4dd210d3d780decee8e8b858fe216e559f7ce2bc
+        uses: microsoft/AL-Go/Actions/WorkflowPostProcess@308e2016d765777e075d36bd9ededc4e64c5e65a
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
